# SemVecSeqLoc

./: README.md
Analyse/: Analyse.txt  CMakeLists.txt  analyse.cc  analyseAll.cc  analyseRes.cc  analyseres17.cc  checkGT.cc  checkRes.cc  checkRes.m  chekRes.m  test.m
AnalyseRes/: CMakeLists.txt  ThisRes.txt  groundTruth.txt  runanalyse.sh  saveChkMat.txt
PreDataOfPark/: CMakeLists.txt  PreDataOfPark.cc  runPreDataOfPark.sh
checkGT/: CMakeLists.txt
matlab/: SemColOrgLagRes.txt  SemColOrgLagRes99.txt  demoManOrg.m  demoManVec.m  demoOrg.m  demoSemColOrg.m  demoSemOrg.m  doFindMatches.m
orgmatlab/: defaultParameters.m  demo.m  demoOrg.m  demoSemColOrg.m
results/: GT.txt  OrgResult.txt  SumResT.txt  SumT.txt
results/res1-10/: ResMat1_625_370.txt  ResMat2_190_40.txt  ResMat3_420_180.txt  ResMat4_370_310.txt  ResMat5_520_410.txt  checkMat1_625_370.txt  checkMat2_190_40.txt  checkMat3_420_180.txt  checkMat4_370_310.txt  checkMat5_520_410.txt
results/res1-6/: ManVecResultHalfmean.txt  ManVecResultNoNaN.txt  ManVecResultNoenhance.txt  ManVecResultStep10.txt  ManVecResultStep2.txt  ManVecResultStep4.txt  ManVecResultStep6.txt  OrgResult.txt  ResMat.txt  SemColOrgLagRes.txt  SemColOrgRes.txt  SemOrgResult.txt  checkMat.txt  checkMatIDx.txt
results/res1-7/: ResMat1_370_625.txt  ResMat2_40_190.txt  ResMat3_180_420.txt  ResMat4_310_370.txt  ResMat5_410_520.txt  checkMat1_370_625.txt  checkMat2_40_190.txt  checkMat3_180_420.txt  checkMat4_310_370.txt  checkMat5_410_520.txt  mkzIdx.m  mkzIdx.txt
results/resultsOne/: SemOrgResult99.txt  (+1 more)
semvec/: defaultParameters.m  demoManVec.m  doDifferenceMatrix.m
(+56 files in other folders)
